--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Сафия Дукузова</title>
     <link rel="stylesheet" href="style.css"/>
+    <meta name="google-site-verification" content="A3ygxkVIVdTa8fwDmA-kb_t1-H77OGT7uoLK8B0F6rg" />
   </head>
   <body>
     <header>
